--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
     <header>
         <h1>Dora Santos</h1>
-        <h1>Estudante de Desenvolvimento Web</h1>
+        <h1>Estudante de Desenvolvimento Web 3.0</h1>
         <p>Construindo soluções modernas e funcionais</p>
     </header>
 
@@ -74,18 +74,18 @@
     <section>
         <h2>Formação</h2>
         <ul>
-            <li>🧑‍🎓 Bacharelado em Ciência da Computação – Universidade de São Paulo (2022)</li>
-            <li>💻 Curso Técnico em Informática – ETEC Cidade Tiradentes (2022-2024)</li>
-            <li>🏢 Ensino Médio Completo – Escola Deputado Silva Prado (1985)</li>
+            <li>🧑‍🎓 Bacharelado em Ciência da Computação - Universidade de São Paulo (2022)</li>
+            <li>💻 Curso Técnico em Informática - ETEC Cidade Tiradentes (2022-2024)</li>
+            <li>🏢 Ensino Médio Completo - Escola Deputado Silva Prado (1985)</li>
         </ul>
     </section>
 
     <section>
         <h2>Projetos</h2>
         <ul class="projetos">
-            <li>🛰️ Portfólio Pessoal – Site com meus projetos</li>
-            <li>🔢 To-Do List – Aplicação para gerenciar tarefas</li>
-            <li>🧮 Calculadora Simples – Projeto em JavaScript puro</li>
+            <li>🛰️ Portfólio Pessoal - Site com meus projetos</li>
+            <li>🔢 To-Do List - Aplicação para gerenciar tarefas</li>
+            <li>🧮 Calculadora Simples - Projeto em JavaScript puro</li>
         </ul>
     </section>
        <section id="contato">
