--- a/index.html
+++ b/index.html
@@ -3,104 +3,240 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dora Santos</title>
-    <title>Portfólio - Desenvolvedor Web</title>
+    <title>Dora Santos - Portfólio</title>
+
     <style>
+        /* ======== ESTILO GERAL ======== */
         body {
             margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-            background: #f4f4f4;
+            font-family: "Poppins", Arial, sans-serif;
+            background: linear-gradient(135deg, #e3f2fd, #fce4ec);
             color: #333;
+            animation: fadeIn 1s ease-in-out;
         }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        /* ======== CABEÇALHO ======== */
         header {
-            background: #1a73e8;
+            background: linear-gradient(135deg, #1a73e8, #6a11cb);
             color: white;
-            padding: 40px 20px;
+            padding: 60px 20px;
             text-align: center;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.2);
         }
+
         header h1 {
             margin: 0;
-            font-size: 2.5rem;
+            font-size: 3rem;
+            animation: zoom 1.5s infinite alternate;
         }
+
+        @keyframes zoom {
+            from { transform: scale(1); }
+            to { transform: scale(1.05); }
+        }
+
+        header h2 {
+            font-size: 1.7rem;
+            margin-top: 10px;
+        }
+
         header p {
-            font-size: 1.2rem;
-            opacity: 0.9;
+            font-size: 1.3rem;
+            opacity: 0.95;
         }
+
+        /* ======== SEÇÕES ======== */
         section {
-            max-width: 900px;
+            max-width: 950px;
             margin: 40px auto;
-            padding: 20px;
+            padding: 25px;
             background: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            border-radius: 20px;
+            box-shadow: 0 6px 18px rgba(0,0,0,0.15);
+            transition: transform .3s;
         }
+
+        section:hover {
+            transform: translateY(-5px);
+        }
+
         h2 {
-            border-left: 5px solid #1a73e8;
-            padding-left: 10px;
+            border-left: 6px solid #1a73e8;
+            padding-left: 12px;
+            font-size: 1.8rem;
         }
+
         ul {
             list-style: none;
             padding: 0;
         }
+
         ul li {
-            padding: 8px 0;
-            font-size: 1.1rem;
+            padding: 10px 0;
+            font-size: 1.2rem;
         }
+
         .projetos li::before {
-            content: "✔ ";
-            color: #1a73e8;
+            content: "✨ ";
         }
+
+        /* ======== LINKS ======== */
+        a {
+            color: #1a73e8;
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: #6a11cb;
+            text-decoration: underline;
+        }
+
+        /* ======== RODAPÉ ======== */
         footer {
             text-align: center;
-            padding: 20px;
-            margin-top: 40px;
-            background: #1a73e8;
+            padding: 25px;
+            background: linear-gradient(135deg, #1a73e8, #6a11cb);
             color: white;
+            margin-top: 40px;
+            font-size: 1.1rem;
+            letter-spacing: 1px;
         }
+
+        /* ===========================
+           RESPONSIVIDADE
+        ============================ */
+
+        /* TAG fundamental — impede zoom automático */
+        img, h1, h2, p, section {
+            max-width: 100%;
+        }
+
+        /* Tablets / telas médias */
+        @media (max-width: 900px) {
+            header h1 {
+                font-size: 2.5rem;
+            }
+
+            header h2 {
+                font-size: 1.4rem;
+            }
+
+            section {
+                margin: 20px;
+                padding: 20px;
+            }
+        }
+
+        /* Celulares grandes */
+        @media (max-width: 600px) {
+            header {
+                padding: 40px 15px;
+            }
+
+            header h1 {
+                font-size: 2.2rem;
+            }
+
+            header h2 {
+                font-size: 1.2rem;
+            }
+
+            header p {
+                font-size: 1rem;
+            }
+
+            h2 {
+                font-size: 1.5rem;
+            }
+
+            ul li {
+                font-size: 1.05rem;
+            }
+
+            section {
+                padding: 18px;
+                margin: 15px;
+            }
+        }
+
+        /* Celulares muito pequenos */
+        @media (max-width: 400px) {
+            header h1 {
+                font-size: 1.8rem;
+            }
+
+            header h2 {
+                font-size: 1rem;
+            }
+
+            header p {
+                font-size: 0.9rem;
+            }
+
+            section {
+                padding: 15px;
+            }
+        }
+
     </style>
 </head>
+
 <body>
     <header>
-        <h1>Dora Santos</h1>
-        <h1>Estudante de Desenvolvimento Web 3.0</h1>
-        <p>Construindo soluções modernas e funcionais</p>
+        <h1>✨ Dora Santos ✨</h1>
+        <h2>🚀 Estudante de Desenvolvimento Web 3.0</h2>
+        <p>Criando soluções modernas, bonitas e inteligentes 💻✨</p>
     </header>
 
     <section>
-        <h2>Sobre mim</h2>
-        <p>Tenho experiência em projetos com <strong>HTML5, CSS3, JavaScript e PHP</strong>. Busco aprimorar minhas habilidades para ingressar no mercado de trabalho como programador.</p>
+        <h2>👩‍💻 Sobre mim</h2>
+        <p>
+            Tenho experiência em projetos com 
+            <strong>HTML5, CSS3, JavaScript e PHP</strong>.  
+            Busco aprimorar minhas habilidades para ingressar no mercado de trabalho como programador(a) 🌟.
+        </p>
     </section>
 
     <section>
-        <h2>Formação</h2>
+        <h2>🎓 Formação</h2>
         <ul>
             <li>🧑‍🎓 Bacharelado em Ciência da Computação - Universidade de São Paulo (2022)</li>
             <li>💻 Curso Técnico em Informática - ETEC Cidade Tiradentes (2022-2024)</li>
-            <li>🏢 Ensino Médio Completo - Escola Deputado Silva Prado (1985)</li>
+            <li>🏫 Ensino Médio Completo - Escola Deputado Silva Prado (1995)</li>
         </ul>
     </section>
 
     <section>
-        <h2>Projetos</h2>
+        <h2>🧩 Projetos</h2>
         <ul class="projetos">
             <li>🛰️ Portfólio Pessoal - Site com meus projetos</li>
-            <li>🔢 To-Do List - Aplicação para gerenciar tarefas</li>
-            <li>🧮 Calculadora Simples - Projeto em JavaScript puro</li>
+            <li>📝 To-Do List - Aplicação para gerenciar tarefas</li>
+            <li>🧮 Calculadora Simples - Feita com JavaScript puro</li>
         </ul>
     </section>
-       <section id="contato">
-            <h2>Contatos</h2>
 
-        <p><strong>E-mail:</strong> dorawiki683@gmail.com </p>
+    <section id="contato">
+        <h2>📬 Contatos</h2>
 
-        <p><strong>Linkedin:</strong> <a href="https://www.linkedin.com/in/dora-wiki-456904397/">Meu Linkedin</a></p>
+        <p><strong>E-mail:</strong> ✉️ dorawiki683@gmail.com</p>
 
+        <p><strong>Linkedin:</strong>  
+            🔗 <a href="https://www.linkedin.com/in/dora-wiki-456904397/">Meu LinkedIn</a>
+        </p>
 
-    <p><strong>Github:</strong> <a href="https://github.com/DoraSantos">Meu github</a> </p>
-
+        <p><strong>Github:</strong>  
+            🐙 <a href="https://github.com/DoraSantos">Meu GitHub</a>
+        </p>
+    </section>
 
     <footer>
-        <p>Contatos | © 2025 Meu Portfólio</p>
+        <p>🌟 Contatos | © 2025 Meu Portfólio 🌟</p>
     </footer>
 </body>
 </html>
